--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,24 @@ spring.application.name=demo
 
 spring.security.user.name=user
 spring.security.user.password=user
+
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=password
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=100MB
+spring.datasource.hikari.auto-commit=true
+spring.datasource.hikari.transaction-isolation=TRANSACTION_READ_COMMITTED
+spring.jpa.defer-datasource-initialization=true
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+spring.h2.console.settings.trace=false
+spring.h2.console.settings.web-allow-others=false
+# https://localhost:8888/actuator
+logging.level.org.springframework=DEBUG
+spring.threads.virtual.enabled=true
